--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: lunaris_engine
-description: "The largest library of algorithms in the Dart language, and soon globally, includes an arsenal of 300 algorithms, including machine learning, networks, encryption algorithms, blockchain, and much more."# algorithm,# data structures
+description: "The largest Dart algorithm library—soon global—packed with 300+ algorithms spanning machine learning, networking, encryption, blockchain, and beyond."# algorithm,# data structures
 version: 0.1.0
 repository: https://github.com/Darklunaris/lunaris_engine
 homepage: https://Darklunaris.vercel.app/
@@ -14,29 +14,3 @@ dev_dependencies:
   test: ^1.24.0
 
 license: MIT
-
-# algorithm
-# algorithms
-# lunaris_engine
-# data structures
-# linked lists
-# trees
-# graphs
-# search
-# sort
-# string
-# set
-# map
-# AI
-# helpers
-# utilities
-# common
-# flutter
-# web
-# mobile
-# desktop
-# server
-# cloud
-# microservices
-# APIs
-# integration
